// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseSpread() 2 page range 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 2,
  "panelCount": 0,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parseSpread() 3 page range 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 3,
  "panelCount": 0,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parseSpread() caption with bold 1`] = `
Object {
  "captionCount": 2,
  "captionWordCount": 7,
  "content": Array [
    Object {
      "captionCount": 2,
      "captionWordCount": 7,
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": "I",
              "type": "lettering-bold",
            },
            Object {
              "content": " didn't mean ",
              "type": "text",
            },
            Object {
              "content": "that",
              "type": "lettering-bold",
            },
            Object {
              "content": "!",
              "type": "text",
            },
          ],
          "lineOffset": 3,
          "modifier": null,
          "type": "caption",
          "wordCount": 4,
        },
        Object {
          "content": Array [
            Object {
              "content": "this is *not*",
              "type": "text",
            },
          ],
          "lineOffset": 5,
          "modifier": null,
          "type": "caption",
          "wordCount": 3,
        },
      ],
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "lineOffset": 1,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 1,
  "panelCount": 1,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parseSpread() dialogue starts with bold 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": "only bold",
              "type": "lettering-bold",
            },
          ],
          "lineOffset": 3,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 2,
        },
        Object {
          "content": Array [
            Object {
              "content": "starts bold",
              "type": "lettering-bold",
            },
            Object {
              "content": " and then",
              "type": "text",
            },
          ],
          "lineOffset": 5,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 4,
        },
      ],
      "dialogueCount": 2,
      "dialogueWordCount": 6,
      "lineOffset": 1,
      "sfxCount": 0,
      "speakers": Array [
        "bob",
        "bob",
      ],
      "type": "panel",
    },
  ],
  "dialogueCount": 2,
  "dialogueWordCount": 6,
  "pageCount": 1,
  "panelCount": 1,
  "sfxCount": 0,
  "speakers": Array [
    "bob",
    "bob",
  ],
  "type": "spread",
}
`;

exports[`parseSpread() dialogue with bold 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": "eat ",
              "type": "text",
            },
            Object {
              "content": "this",
              "type": "lettering-bold",
            },
            Object {
              "content": " not ",
              "type": "text",
            },
            Object {
              "content": "that",
              "type": "lettering-bold",
            },
            Object {
              "content": "!",
              "type": "text",
            },
          ],
          "lineOffset": 3,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 4,
        },
        Object {
          "content": Array [
            Object {
              "content": "this is *not*",
              "type": "text",
            },
          ],
          "lineOffset": 5,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 3,
        },
      ],
      "dialogueCount": 2,
      "dialogueWordCount": 7,
      "lineOffset": 1,
      "sfxCount": 0,
      "speakers": Array [
        "bob",
        "bob",
      ],
      "type": "panel",
    },
  ],
  "dialogueCount": 2,
  "dialogueWordCount": 7,
  "pageCount": 1,
  "panelCount": 1,
  "sfxCount": 0,
  "speakers": Array [
    "bob",
    "bob",
  ],
  "type": "spread",
}
`;

exports[`parseSpread() dialogue with modifier 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": "go!",
              "type": "text",
            },
          ],
          "lineOffset": 3,
          "modifier": "yell",
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 1,
        },
      ],
      "dialogueCount": 1,
      "dialogueWordCount": 1,
      "lineOffset": 1,
      "sfxCount": 0,
      "speakers": Array [
        "bob",
      ],
      "type": "panel",
    },
  ],
  "dialogueCount": 1,
  "dialogueWordCount": 1,
  "pageCount": 1,
  "panelCount": 1,
  "sfxCount": 0,
  "speakers": Array [
    "bob",
  ],
  "type": "spread",
}
`;

exports[`parseSpread() inverted page range 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 2,
  "panelCount": 0,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parseSpread() kitchen sink 1`] = `
Object {
  "captionCount": 1,
  "captionWordCount": 1,
  "content": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [
        Object {
          "content": "Some characters stand around. And do stuff.",
          "lineOffset": 4,
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "content": "ok",
              "type": "text",
            },
          ],
          "lineOffset": 6,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 1,
        },
        Object {
          "content": Array [
            Object {
              "content": "try it ",
              "type": "text",
            },
            Object {
              "content": "again",
              "type": "lettering-bold",
            },
          ],
          "lineOffset": 8,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 3,
        },
      ],
      "dialogueCount": 2,
      "dialogueWordCount": 4,
      "lineOffset": 2,
      "sfxCount": 0,
      "speakers": Array [
        "bob",
        "bob",
      ],
      "type": "panel",
    },
    Object {
      "captionCount": 1,
      "captionWordCount": 1,
      "content": Array [
        Object {
          "content": "This is panel description.",
          "lineOffset": 12,
          "type": "paragraph",
        },
        Object {
          "content": "boom",
          "lineOffset": 14,
          "modifier": null,
          "type": "sfx",
        },
        Object {
          "content": Array [
            Object {
              "content": "yep",
              "type": "text",
            },
          ],
          "lineOffset": 16,
          "modifier": null,
          "type": "caption",
          "wordCount": 1,
        },
      ],
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "lineOffset": 10,
      "sfxCount": 1,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [
        Object {
          "content": "And they walk off into the sunset.",
          "lineOffset": 20,
          "type": "paragraph",
        },
      ],
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "lineOffset": 18,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 2,
  "dialogueWordCount": 4,
  "pageCount": 2,
  "panelCount": 3,
  "sfxCount": 1,
  "speakers": Array [
    "bob",
    "bob",
  ],
  "type": "spread",
}
`;

exports[`parseSpread() page with panels 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [],
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "lineOffset": 2,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [],
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "lineOffset": 4,
      "sfxCount": 0,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 1,
  "panelCount": 2,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parseSpread() page with panels and lettering 1`] = `
Object {
  "captionCount": 1,
  "captionWordCount": 1,
  "content": Array [
    Object {
      "captionCount": 0,
      "captionWordCount": 0,
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": "ok",
              "type": "text",
            },
          ],
          "lineOffset": 4,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 1,
        },
        Object {
          "content": Array [
            Object {
              "content": "try it again",
              "type": "text",
            },
          ],
          "lineOffset": 6,
          "modifier": null,
          "speaker": "bob",
          "type": "dialogue",
          "wordCount": 3,
        },
      ],
      "dialogueCount": 2,
      "dialogueWordCount": 4,
      "lineOffset": 2,
      "sfxCount": 0,
      "speakers": Array [
        "bob",
        "bob",
      ],
      "type": "panel",
    },
    Object {
      "captionCount": 1,
      "captionWordCount": 1,
      "content": Array [
        Object {
          "content": "This is panel description.",
          "lineOffset": 10,
          "type": "paragraph",
        },
        Object {
          "content": "boom",
          "lineOffset": 12,
          "modifier": null,
          "type": "sfx",
        },
        Object {
          "content": Array [
            Object {
              "content": "yep",
              "type": "text",
            },
          ],
          "lineOffset": 14,
          "modifier": null,
          "type": "caption",
          "wordCount": 1,
        },
      ],
      "dialogueCount": 0,
      "dialogueWordCount": 0,
      "lineOffset": 8,
      "sfxCount": 1,
      "speakers": Array [],
      "type": "panel",
    },
  ],
  "dialogueCount": 2,
  "dialogueWordCount": 4,
  "pageCount": 1,
  "panelCount": 2,
  "sfxCount": 1,
  "speakers": Array [
    "bob",
    "bob",
  ],
  "type": "spread",
}
`;

exports[`parseSpread() self to self page range 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 1,
  "panelCount": 0,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;

exports[`parseSpread() single page 1`] = `
Object {
  "captionCount": 0,
  "captionWordCount": 0,
  "content": Array [],
  "dialogueCount": 0,
  "dialogueWordCount": 0,
  "pageCount": 1,
  "panelCount": 0,
  "sfxCount": 0,
  "speakers": Array [],
  "type": "spread",
}
`;
